# rust-meta-interpreter

./: .gitignore  Cargo.toml  Grammar  README  README.md  TODO.md  build.rs  closure.schala  compile.maaru  compile.schala  conditional.schala  lambda.schala  main.schala  recurse.schala  test.lang  test.schala  unicode.maaru  while.schala
maaru/: Cargo.toml
maaru/src/: compilation.rs  eval.rs  lib.rs  parser.rs  tokenizer.rs
robo/: Cargo.toml
robo/src/: lib.rs
rukka/: Cargo.toml
rukka/src/: lib.rs
schala-codegen/: Cargo.toml
schala-codegen/src/: lib.rs
schala-lang/: Cargo.toml
schala-lang/src/: ast.rs  ast_reducing.rs  builtin.rs  eval.rs  lib.rs  parsing.rs  reduced_ast.rs  symbol_table.rs  tokenizing.rs  type_check.rs  typechecking.rs  util.rs
schala-lib/: Cargo.toml
schala-lib/src/: language.rs  lib.rs  webapp.rs
schala-repl/: Cargo.toml  build.rs
schala-repl/src/: language.rs  lib.rs  repl.rs  webapp.rs
source_files/: closure.maaru  conditional.maaru  first.schala  lambda.maaru  test.rukka  test.schala
source_files/schala/: does_scope_work.schala  first.schala  first_program.schala  fizzbuzz.schala  syntax_playground.schala  test.schala  very_simple.schala
src/: compilation.rs  eval.rs  evaluate.rs  evaluator.rs  language.rs  llvm_wrap.rs  main.rs  parser.rs  tokenizer.rs  webapp.rs
src/maaru_lang/: compilation.rs  eval.rs  mod.rs  parser.rs  tokenizer.rs
src/robo_lang/: mod.rs
src/rukka_lang/: mod.rs
src/schala_lang/: builtin.rs  compilation.rs  eval.rs  mod.rs  parser.rs  parsing.rs  tokenizer.rs  tokenizing.rs  type_check.rs  typechecking.rs
src/virtual_machine/: mod.rs
static/: index.html  main.js  main.jsx  package.json
