[package]
name = "schala"
version = "0.1.0"
authors = ["greg <greg.shuflin@protonmail.com>"]

[dependencies]

llvm-sys = "*"
take_mut = "0.1.3"
itertools = "0.5.8"
getopts = "*"
linefeed = "0.3"
lazy_static = "0.2.8"
maplit = "*"
colored = "1.5"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
rocket = "*"
rocket_codegen = "*"
rocket_contrib = "*"
phf = "0.7.12"
includedir = "0.2.0"

[build-dependencies]
includedir_codegen = "0.2.0"
