[package]
name = "schala"
version = "0.1.0"
authors = ["greg <greg.shuflin@protonmail.com>"]

[dependencies]

llvm-sys = "*"
take_mut = "0.1.3"
itertools = "0.5.8"
lazy_static = "0.2.8"
maplit = "*"
colored = "1.5"

schala-repl = { path = "schala-repl" }

[build-dependencies]
includedir_codegen = "0.2.0"

[workspace]
