[package]
name = "schala"
version = "0.1.0"
authors = ["greg <greg.shuflin@protonmail.com>"]

[dependencies]

schala-repl = { path = "schala-repl" }
schala-codegen = { path = "schala-codegen" }
maaru-lang = { path = "maaru" }
rukka-lang = { path = "rukka" }
robo-lang = { path = "robo" }
schala-lang = { path = "schala-lang" }

[build-dependencies]
includedir_codegen = "0.2.0"

[workspace]
